---
source: book/tests/snapshot.rs
expression: "from projects\nderive first_check_in = start + 10days\n"
---
SELECT
  *,
  start + INTERVAL 10 DAY AS first_check_in
FROM
  projects

